// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Donut Progress over 1 1`] = `
<svg
  className="sc-AxjAm dESvVA"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <title>
    120
    %
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    strokeWidth="6"
  >
    <circle
      className="sc-AxirZ MZXYp"
      cx="12"
      cy="12"
      r="9"
    />
    <circle
      className="sc-AxiKw eqEwrc"
      cx="12"
      cy="12"
      r="9"
      transform="rotate(-90 12 12)"
    />
  </g>
</svg>
`;

exports[`Donut Progress under 1 1`] = `
<svg
  className="sc-AxjAm dESvVA"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <title>
    -90
    %
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    strokeWidth="6"
  >
    <circle
      className="sc-AxirZ MZXYp"
      cx="12"
      cy="12"
      r="9"
    />
    <circle
      className="sc-AxiKw kJmevy"
      cx="12"
      cy="12"
      r="9"
      transform="rotate(-90 12 12)"
    />
  </g>
</svg>
`;

exports[`Donut Snapshots No props 1`] = `
<svg
  className="sc-AxjAm dESvVA"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <title>
    0
    %
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    strokeWidth="6"
  >
    <circle
      className="sc-AxirZ MZXYp"
      cx="12"
      cy="12"
      r="9"
    />
    <circle
      className="sc-AxiKw eRhFxV"
      cx="12"
      cy="12"
      r="9"
      transform="rotate(-90 12 12)"
    />
  </g>
</svg>
`;

exports[`Donut Snapshots Progress 1`] = `
<svg
  className="sc-AxjAm dESvVA"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <title>
    90
    %
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    strokeWidth="6"
  >
    <circle
      className="sc-AxirZ MZXYp"
      cx="12"
      cy="12"
      r="9"
    />
    <circle
      className="sc-AxiKw eZOBHO"
      cx="12"
      cy="12"
      r="9"
      transform="rotate(-90 12 12)"
    />
  </g>
</svg>
`;

exports[`Donut Snapshots Progress&WarningTreshold 1`] = `
<svg
  className="sc-AxjAm dESvVA"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <title>
    70
    %
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    strokeWidth="6"
  >
    <circle
      className="sc-AxirZ MZXYp"
      cx="12"
      cy="12"
      r="9"
    />
    <circle
      className="sc-AxiKw ouiXJ"
      cx="12"
      cy="12"
      r="9"
      transform="rotate(-90 12 12)"
    />
  </g>
</svg>
`;

exports[`Donut With children 1`] = `
<svg
  className="sc-AxjAm dESvVA"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <title>
    90
    %
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    strokeWidth="6"
  >
    <circle
      className="sc-AxirZ MZXYp"
      cx="12"
      cy="12"
      r="9"
    />
    <circle
      className="sc-AxiKw eZOBHO"
      cx="12"
      cy="12"
      r="9"
      transform="rotate(-90 12 12)"
    />
  </g>
</svg>
`;

exports[`Donut invalid progress 1`] = `
<svg
  className="sc-AxjAm dESvVA"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <title>
    0
    %
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    strokeWidth="6"
  >
    <circle
      className="sc-AxirZ MZXYp"
      cx="12"
      cy="12"
      r="9"
    />
    <circle
      className="sc-AxiKw eRhFxV"
      cx="12"
      cy="12"
      r="9"
      transform="rotate(-90 12 12)"
    />
  </g>
</svg>
`;
